--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Poopy Dookie</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -34,22 +37,54 @@
 
 
     <div class="information-section">
-
+        <h1 class="information-title">Some Information</h1>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-image"></div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <p class="card-text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
 
 
     <div class="quote-section">
-
+        <div class="quote-container">
+            <h3 class="quote-text">This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+                All I know is that it looks nice.
+            </h3>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
     </div>
 
 
     <div class="cta-section">
-
+        <div class="cta-container">
+            <div class="cta-left">
+                <h4 class="cta-title">Call to action! It's Time!</h4>
+                <p class="cta-subtext">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="cta-right">
+                <button class="cta-button">Sign Up</button>
+            </div>
+        </div>
     </div>
 
 
     <div class="footer">
-
+        <p>Copyright &copy; Andrew Fuckin' Gabra 2023</p>
     </div>
 
 
