Style Hero and Info Sections

--- a/index.html
+++ b/index.html
@@ -25,19 +25,22 @@
 
     <div class="hero-section">
         <div class="hero-content">
-            <h1 class="hero-main"></h1>
-            <p class="hero-subtext"></p>
+            <h1 class="hero-main">This Website is Awesome!</h1>
+            <p class="hero-subtext">This website has some subtext that goes under the main title. 
+                It's a smaller font and the color is lower contrast.
+            </p>
             <button class="hero-button">Sign Up</button>
         </div>
-        <div class="hero-img">
-            this is a placeholder for an image!
+        <div class="hero-img-box">
+            <div class="hero-img">
+                this is a placeholder for an image!
+            </div>
         </div>
-
     </div>
 
 
     <div class="information-section">
-        <h1 class="information-title">Some Information</h1>
+        <h1 class="information-title">Some Random Information.</h1>
         <div class="card-container">
             <div class="card">
                 <div class="card-image"></div>
